--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Yet Another Reporter for Mocha",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Tests are visual: run gulp test-once within the test folder\" && exit 1"
+    "pretest": "run-s lint",
+    "test": "runtests",
+    "lint": "jslint index.js"
   },
   "repository": {
     "type": "git",
@@ -29,6 +31,8 @@
   "devDependencies": {
     "del": "^2.2.0",
     "gulp": "^3.9.1",
+    "jslint": "^0.10.1",
+    "npm-run-all": "^2.1.2",
     "run-sequence": "^1.1.5"
   }
 }
