--- a/jslint.conf
+++ b/jslint.conf
@@ -4,5 +4,6 @@
     "vars":true,
     "passfail":false,
     "plusplus":false,
-    "predef": "module,require"
+    "predef": "module,require",
+    "proto": true
 }
